--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,30 @@
     "version": 2,
     "builds": [
       {
-        "src": "src/Sever.js",
+        "src": "Sever.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "src/Sever.js"
+        "dest": "Sever.js"
       },
       {
         "src": "/(.*)",
-        "dest": "/"
+        "dest": "Server.js"
+      },
+      {
+        "src": "/uploads/(.*)",
+        "dest": "public/uploads/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "public/$1"  
+      },
+      {
+        "src": "/views/\\.(ejs)$",
+        "dest": "views/$1"
       }
     ]
   }
