--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "Server.js"
+        "dest": "Sever.js"
       },
       {
         "src": "/uploads/(.*)",
